# IPC_QUERY

./: .env.example  .gitignore  Dockerfile  LICENSE  README.md  build_db.py  compare_with_ipc_db.py  docker-compose.yml  pdf_truth.py  pyproject.toml  qa_check.py  qa_generate.py  qa_samples.auto.11-22___083.pdf.json  qa_samples.auto.11-30___083.pdf.json  qa_samples.auto.21-23___083.pdf.json  qa_samples.auto.21-27___083.pdf.json  qa_samples.auto.21-45___083.pdf.json  qa_samples.json  qa_samples.promote.json  query_db.py  requirements.txt  web_server.py
.claude/: settings.local.json
.github/workflows/: ci.yml
__pycache__/: build_db.cpython-314.pyc.1362028439248  pdf_truth.cpython-314.pyc.2157455346576
cli/: __init__.py  commands.py
docs/: DEPLOYMENT.md  FRONTEND_BUILD_MAPPING.md  GETTING_STARTED.md  MAINTENANCE.md  README.md  RELEASE_CHECKLIST.md  STRUCTURE.md  UI_REBUILD_FINAL_SUMMARY.md
docs/frontend/: FRONTEND_HANDOFF_RELEASE3.md  FRONTEND_HANDOFF_V4.md
docs/md3/: M0_BASELINE.md  M4_DB_REFACTOR_ACCEPTANCE.md  M5_RELEASE_CHECKLIST.md
frontend/: db.html  index.html  package-lock.json  package.json  part.html  search.html  tailwind.config.ts  tsconfig.json  viewer.html  vite.config.ts
ipc_query/: __init__.py  __main__.py  build_db.py  config.py  constants.py  exceptions.py
ipc_query/api/: __init__.py  handlers.py  middleware.py  schemas.py  server.py
legacy/: ipc_db_error_catalog.txt  main.py  web_server.py
scripts/: __init__.py
tests/: conftest.py
web/: app.js  db.html  index.html  keyword_utils.js  part.html  search.html  styles.css  viewer.html
(+137 files in other folders)
